--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8g -XX:MaxMetaspaceSize=2g -Dkotlin.daemon.jvm.options=-Xmx6g -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
