refactor: switch to protoc for descriptor-based codegen
This commit refactors the code generation process to use the official `protoc` compiler, improving robustness and feature support. The old manual parser and codegen task are replaced with a new system that generates code from a `FileDescriptorSet`.

**Key Changes:**

-   **protoc Integration**: The Gradle plugin now invokes `protoc` to generate a `descriptor.pb` file. This descriptor acts as the single source of truth for code generation, ensuring all imports and types are correctly resolved.
-   **Descriptor-Based Codegen**: `ProtoKitCodegen` is rewritten to consume the `FileDescriptorSet` instead of parsing proto files directly. This enables support for:
    -   Cross-file imports.
    -   Enum generation.
    -   Correctly resolving fully qualified type names.
-   **New Gradle Task**: A new `ProtoKitCodegenTask` is introduced to handle the generation from the descriptor file.
-   **Plugin Lifecycle**: The `ProtoKitPlugin` logic is updated to correctly hook into the KMP and Android Gradle plugin lifecycles, ensuring source sets are configured and task dependencies are correctly established using `afterEvaluate`.
-   **Dependency Updates**: Upgraded `protobuf-gradle-plugin`, `kotlinpoet`, and `protobuf-java-util` to newer versions.
-   **Documentation**: The `README.md` and `ARCHITECTURE.md` are updated to reflect the new `protoc`-based architecture, document enum support, and clarify the build process.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,7 @@ runner = "1.5.2"
 core = "1.5.0"
 ktor = "3.4.0"
 okhttp = "5.3.2"
-
+protoKitPlugin = "0.1.1"
 
 
 [libraries]
@@ -64,6 +64,7 @@ kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", versio
 
 
 [plugins]
+protoKitPlugin = { id = "com.fames.protokit.plugin", version.ref = "protoKitPlugin" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
